Changes made to the website

--- a/crc.html
+++ b/crc.html
@@ -2,10 +2,9 @@
 <html lang ="en">
     <head>
         <meta charset = "UTF-8">
-        <title>Recipes</title>
+        <title>blank</title>
     </head>
     <body>
-        <h1>Recipes</h1>
-        <a href="recipes/crc.html">CRC</a>
+        <h1>Cabbage Roll Casserole</h1>
     </body>
 </html>
